--- a/tf-game/package.json
+++ b/tf-game/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@dicebear/collection": "^8.0.0",
     "@dicebear/core": "^8.0.0",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@tensorflow-models/handpose": "^0.1.0",
+    "@tensorflow/tfjs": "^4.17.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
